microservicios_despliegue/k8s/eureka-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
  namespace: microservicios
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
      - name: eureka-server
        image: greinoso/ms-eureka-server:latest
        ports:
        - containerPort: 8761
        readinessProbe:
          httpGet:
            path: /
            port: 8761
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 8761
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-service
  namespace: microservicios
spec:
  selector:
    app: eureka-server
  ports:
  - port: 8761
    targetPort: 8761
