microservicios_despliegue/k8s/ms-catalogo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-catalogo
  namespace: microservicios
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-catalogo
  template:
    metadata:
      labels:
        app: ms-catalogo
    spec:
      containers:
      - name: ms-catalogo
        image: greinoso/ms-catalogo:latest
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 45
          periodSeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 90
          periodSeconds: 30
          timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: ms-catalogo-service
  namespace: microservicios
spec:
  selector:
    app: ms-catalogo
  ports:
  - port: 8080
    targetPort: 8080
