microservicios_despliegue/k8s/ms-publicaciones.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-publicaciones
  namespace: microservicios
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ms-publicaciones
  template:
    metadata:
      labels:
        app: ms-publicaciones
    spec:
      containers:
      - name: ms-publicaciones
        image: greinoso/ms-publicaciones:latest # cambiar el nombre
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 45
          periodSeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 90
          periodSeconds: 30
          timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: ms-publicaciones-service
  namespace: microservicios
spec:
  selector:
    app: ms-publicaciones
  ports:
  - port: 8080
    targetPort: 8080
